--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-alembic==0.8.10
 appdirs==1.4.0
 blinker==1.3
 click==6.7
@@ -12,7 +11,7 @@ Flask-Migrate==2.0.3
 Flask-RQ==0.2
 Flask-Script==2.0.5
 Flask-SSLify==0.1.5
-Flask-WTF==0.11
+Flask-WTF
 gunicorn==19.6.0
 honcho==0.7.1
 itsdangerous==0.24
@@ -35,4 +34,4 @@ webassets==0.12.1
 Werkzeug==0.11.15
 WTForms==2.1
 Flask-mongoengine
-mockmongo
+mongomock
