--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,6 @@ Flask-Assets==0.12
 Flask-Compress==1.4.0
 Flask-Login==0.4.0
 Flask-Mail==0.9.1
-Flask-Migrate==2.0.3
 Flask-RQ==0.2
 Flask-Script==2.0.5
 Flask-SSLify==0.1.5
@@ -35,3 +34,4 @@ Werkzeug==0.11.15
 WTForms==2.1
 Flask-mongoengine
 mongomock
+flask-pytest
