--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,4 +5,31 @@ repos:
     -   id: trailing-whitespace
     -   id: end-of-file-fixer
     -   id: check-yaml
-    -   id: check-added-large-files
+    -   id: check-json
+    -   id: check-merge-conflict
+    -   id: check-xml
+    -   id: debug-statements
+    -   id: requirements-txt-fixer
+-   repo: https://github.com/asottile/seed-isort-config
+    rev: v1.1.0
+    hooks:
+    -   id: seed-isort-config
+-   repo: https://github.com/pre-commit/mirrors-isort
+    rev: v4.3.4
+    hooks:
+    -   id: isort
+-   repo: https://github.com/pre-commit/mirrors-mypy
+    rev: v0.620
+    hooks:
+    -   id: mypy
+-   repo: https://github.com/pre-commit/mirrors-yapf
+    rev: v0.22.0
+    hooks:
+    -   id: yapf
+-   repo: local
+    hooks:
+    -   id: pytest
+        name: pytest
+        description: This hook triggers pytest.
+        entry: pytest -n 4
+        language: python
