--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@
 .logs/
 htmlcov/
 app/static/scripts/*
-app/static/styles/vendor.css
+app/static/styles/*.css
 
 .webassets-cache/
 webassets-external/
