--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,7 +1,7 @@
 exclude: 'venv/'
 repos:
 -   repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v1.3.0
+    rev: v1.4.0
     hooks:
     -   id: trailing-whitespace
     -   id: check-yaml
@@ -9,9 +9,9 @@ repos:
     -   id: check-merge-conflict
     -   id: check-xml
     -   id: debug-statements
-    -   id: requirements-txt-fixer
+    -   id: check-case-conflict
 -   repo: https://github.com/asottile/seed-isort-config
-    rev: v1.1.0
+    rev: v1.2.0
     hooks:
     -   id: seed-isort-config
 -   repo: https://github.com/pre-commit/mirrors-isort
