--- a/Pipfile
+++ b/Pipfile
@@ -4,17 +4,10 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-click = "*"
 flask-mongoengine = "*"
-itsdangerous = "*"
 mongomock = "*"
 python-dotenv = "*"
 "raygun4py" = "*"
-redis = "*"
-requests = "*"
-rq = "*"
-six = "*"
-webassets = "*"
 Flask = "*"
 Flask-Assets = "*"
 Flask-Compress = "*"
@@ -24,9 +17,11 @@ Flask-Script = "*"
 Flask-SSLify = "*"
 Flask-WTF = "*"
 Flask-Moment = "*"
-pyyaml = "*"
-pipenv = "*"
 "flask-rq2" = "*"
+aiohttp = "*"
+motor = "*"
+cchardet = "*"
+aiodns = "*"
 
 [dev-packages]
 isort = "*"
