--- a/Pipfile
+++ b/Pipfile
@@ -36,6 +36,7 @@ pytest = "*"
 pytest-asyncio = "*"
 aioresponses = "*"
 pytest-randomly = "*"
+pytest-icdiff = "*"
 
 [requires]
 python_version = "3.6"
