:arrow_up::whale: update dockerfile to add mirror

--- a/Pipfile
+++ b/Pipfile
@@ -24,6 +24,9 @@ cchardet = "*"
 aiodns = "*"
 jsmin = "*"
 gunicorn = "*"
+rednose = "*"
+nose = "*"
+coverage = "*"
 
 [dev-packages]
 isort = "*"
