--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ services:
         env_file: .env
         ports:
             - '43960:8000'
+        volumes:
+            - static_file:/home/mindpalace/app/static
         depends_on:
             - mongo
             - redis
@@ -24,6 +26,21 @@ services:
             - redis_data:/data
         ports:
             - '43962:6379'
+    nginx:
+        image: nginx:latest
+        environment:
+            - APP_HOST=webapp
+        volumes:
+            - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+            - /home/hzy/myfile/certs/cert.pem:/etc/cert.pem
+            - /home/hzy/myfile/certs/key.pem:/etc/key.pem
+            - static_file:/static
+        ports:
+            - '80:80'
+            - '443:443'
+        depends_on:
+            - webapp
 volumes:
     mongo_data:
     redis_data:
+    static_file:
