--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -31,9 +31,10 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         }
 
-        location /static {
+        location ^~ /static {
             # handle static files directly, without forwarding to the application
-            alias /static;
+            include /etc/nginx/mime.types;
+            root /home/mindpalace/;
             expires 30d;
         }
     }
