:lock: security change in nginx conf

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -21,6 +21,9 @@ http {
 
 	ssl_certificate /etc/cert.pem;
         ssl_certificate_key /etc/key.pem;
+	ssl_prefer_server_ciphers on;
+	ssl_ciphers ECDH+AESGCM:ECDH+AES256:ECDH+AES128:DHE+AES128:!ADH:!AECDH:!MD5;
+	ssl_protocols TLSv1.1 TLSv1.2;
 
         location / {
             # forward application requests to the gunicorn server
