--- a/Pipfile
+++ b/Pipfile
@@ -41,6 +41,7 @@ pytest-asyncio = "*"
 aioresponses = "*"
 pytest-randomly = "*"
 pytest-icdiff = "*"
+fabric = "*"
 
 [requires]
 python_version = "3.6"
