--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,8 +33,8 @@ services:
             - APP_HOST=webapp
         volumes:
             - ./deploy/nginx/nginx.conf:/etc/nginx/nginx.conf
-            - /home/hzy/myfile/certs/cert.pem:/etc/cert.pem
-            - /home/hzy/myfile/certs/key.pem:/etc/key.pem
+            - ${SSL_CERT_PATH}/cert.pem:/etc/cert.pem
+            - ${SSL_CERT_PATH}/key.pem:/etc/key.pem
             - static_file:/home/mindpalace/static
         ports:
             - '80:80'
