--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
         image: mongo:latest
         volumes:
             - mongo_data:/data/db
-        command: mongod
+        command: mongod -auth
         ports:
             - '43961:27017'
 
