:whales: update remote image when docker compose up

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,7 @@ services:
         env_file: .env
         ports:
             - '43960:8000'
+        pull: true
         restart: always
         volumes:
             - ./app:/home/mindpalace/app
