:wrench: add gizp to nginx config to reduce load time

--- a/deploy/nginx/nginx.conf
+++ b/deploy/nginx/nginx.conf
@@ -5,6 +5,23 @@ events {
 }
 
 http {
+    # compress static file
+    gzip on;
+    gzip_disable "MSIE [1-6]\.";
+    gzip_comp_level 6;
+    gzip_min_length 1100;
+    gzip_buffers 16 8k;
+    gzip_proxied any;
+    gzip_static on;
+    gzip_vary on;
+    gzip_types
+      text/css
+      text/javascript
+      text/xml
+      text/plain
+      application/javascript
+      image/svg+xml;    
+
     server {
         # listen on port 80 (http)
         listen 80;
